[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math_lib"
version = "0.0.1"
authors = [
 { name="AntonMe", email="gamezak785@gmail.com" },
]
description = "for math - be sas"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
URL = "https://github.com/GameZak2/math_lib"